@@ -1,3 +1,12 @@
+2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Tweak C code to eliminate some compiler warnings.
+
+	* libpq.c (lob_write): Remove unnecessary cast from `void *'.
+	Also, use `size_t' for vars involved in computing `remaining'.
+	(pg_result_error_field): Add `default: ;' to `switch'.
+	(init_module): Use `unsigned int' for iteration var.
+
 2008-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	C optimization: Make `pg-lo-read' faster.
